 - Added Full German lessons translation
 - Added 10 first lessons in Spanish
 - Added Italian UI and welcome page translations
 - HTML code cleanup
 - All lessons are now encoded in UTF-8 and XHTML strict compliant
 - Added 5 new lessons
 - Added files necessary for Windows/Mac/Linux packaging (a beginning of...)
 - Removed languages count from lesson 1 simplifying translation maintenance
 - Added a link to the lessons at the top of the welcome page
 - Added Peter Maas checktrans.py script to verify translation XML compliance
 - Sample code/world are now saved in automatically detected user home folder
 - Removed reference to highlight button which no longer exist
 - Fixed turkish.po file so UI can work in Turkish as well
 - Added new rur-ple icons
 - Added script to launch lessons from default browser
 - Added desktop files for direct access to lessons
 - Fixed Linux rules file to address issue #14
 - Provided an improved Chinese translation
 - Fixed wxPython 2.6/2.8 differences bugs
 - Fixed missing strings from pot file
 - Modified default panes sizes to avoid scrollbars
 - Replaced fixed dimensions by variables to allow configurable startup sizes
 - Added 2 command line options to match rurple with different screen sizes (-s -sw)
 - localized lesson screenshots that have text on it


------------------------------------------------------------------------------
1.0.1 - Dec/29/2009
------------------------------------------------------------------------------
 - Fixed slider bug
 - Updated "About the brower" page to reflect current translation status (en,zh_CN)
 - Fixed wxPython2.6 dependency
 - Provided deb and rpm package on top of the existing windows installer (available since 1.0)


------------------------------------------------------------------------------
1.0 - Dec/28/2009
------------------------------------------------------------------------------
 - changelog.txt created
 - Updated translation (en)
 - Added translation (zh_CN)